--- a/index.html
+++ b/index.html
@@ -2,7 +2,26 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title>Module 4 Solution
+  Hello Yaakov
+
+Good Bye John
+
+Good Bye Jen
+
+Good Bye Jason
+
+Hello Paul
+
+Hello Frank
+
+Hello Larry
+
+Hello Paula
+
+Hello Laura
+
+Good Bye Jim</title>
   <script>
     var names = []; // DO NOT REMOVE
   </script>
