--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution
-  Hello Yaakov
+ </title>
+  <script>
+    var names = []; // DO NOT REMOVE
+  </script>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
+</head>
+<body>
+  <h1>Module 4 Solution Starter</h1>
+  <p> Hello Yaakov
 
 Good Bye John
 
@@ -21,15 +31,6 @@ Hello Paula
 
 Hello Laura
 
-Good Bye Jim</title>
-  <script>
-    var names = []; // DO NOT REMOVE
-  </script>
-  <script src="SpeakHello.js"></script>
-  <script src="SpeakGoodBye.js"></script>
-  <script src="script.js"></script>
-</head>
-<body>
-  <h1>Module 4 Solution Starter</h1>
+    Good Bye Jim</p>
 </body>
 </html>
