--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
-  <p> Hello Yaakov
+  <p> Hello Yaakov<br><br>
 
-Good Bye John
+Good Bye John<br><br>
 
-Good Bye Jen
+Good Bye Jen<br><br>
 
-Good Bye Jason
+Good Bye Jason<br><br>
 
-Hello Paul
+Hello Paul<br><br>
 
-Hello Frank
+Hello Frank<br><br>
 
-Hello Larry
+Hello Larry<br><br>
 
-Hello Paula
+Hello Paula<br><br>
 
-Hello Laura
+Hello Laura<br><br>
 
-    Good Bye Jim</p>
+Good Bye Jim</p>
 </body>
 </html>
