--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution</h1>
   <p> Hello Yaakov<br><br>
 
 Good Bye John<br><br>
